# tauri-plugin-blec

./: Cargo.toml  README.md  package.json  typedoc.json
android/: .gitignore  build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: BleClientPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: connection_state.toml  get_adapter_state.toml  list_services.toml  recv.toml  recv_string.toml  scanning_state.toml  send_string.toml  subscribe_string.toml  unsubscribe.toml
permissions/schemas/: schema.json
src/: android.rs  commands.rs  error.rs  event_handlers.rs  handler.rs  lib.rs  models.rs
