[package]
name = "tauri-plugin-blec"
license = "MIT OR Apache-2.0"
version = "0.13.0-beta.0"
authors = ["Manuel Philipp"]
description = "BLE-Client plugin for Tauri"
edition = "2021"
rust-version = "1.87.0"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-blec"
repository = "https://github.com/MnlPhlp/tauri-plugin-blec"
readme = "README.md"
homepage = "https://github.com/MnlPhlp/tauri-plugin-blec"

[dependencies]
tauri = { version = "2.0.6", features = ["wry"] }
serde = "1.0"
thiserror = "2.0"
bluest = { git = "https://github.com/wuwbobo2021/bluest", commit = "890a895" }
tokio = { version = "1.40.0", features = ["time"] }
uuid = "1.11.0"
tracing = "0.1.40"
futures = { version = "0.3.31", default-features = false }
enumflags2 = { version = "0.7", features = ["serde"] }

[target.'cfg(target_os = "android")'.dependencies]
#async-trait = "0.1.83"
serde_json = "1"
jni = "0.22.4"
jni-min-helper = "0.4.5"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
tauri-build = "2.0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-linux-android",
  "x86_64-apple-ios",
]
